--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
   docker:
     name: Build and Publish Docker Image
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, sonarcloud]
     steps:
       - uses: actions/checkout@v3
       - uses: benjlevesque/short-sha@v2.2
