--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
       - "**/README.md"
       - "**/LICENSE"
       - "**/.gitignore"
+      - "**/script-test.sh"
 jobs:
   build:
     name: Build and Test
