--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - "**/LICENSE"
       - "**/.gitignore"
       - "**/script-test.sh"
+      - "**/*.png"
 jobs:
   build:
     name: Build and Test
