--- a/hello-rust/values.yaml
+++ b/hello-rust/values.yaml
@@ -3,12 +3,17 @@ image: franciscomoreno1/hello-rust-docker:latest
 containerResources:
   limits:
     cpu: 50m
+    memory: 100mi
+    ephemeralStorage: "2Gi"
   requests:
     cpu: 25m
+    memory: 100mi
+    ephemeralStorage: "2Gi"
 
 servicePort: 8000
 
 minReplicas: 1
 
 maxReplicas: 10
+
 averageUtilization: 50
